Security: Remove firebase_options.dart from version control and update .gitignore
- Added lib/firebase_options.dart to .gitignore to prevent committing sensitive Firebase configuration
- Removed firebase_options.dart from Git tracking while preserving local file
- This prevents accidental exposure of Firebase API keys and project configuration

--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,8 @@ test_*_consistency.dart
 # Local configuration files
 android/local.properties
 
+# Firebase configuration (contains sensitive API keys)
+lib/firebase_options.dart
+
 # IDE files (additional)
 *.iml
