--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,8 +73,8 @@ dependencies:
   # File operations
   path: ^1.9.0
 
-  # OCR functionality
-  google_ml_kit: ^0.18.0
+  # OCR functionality - REMOVED: Only using PDF text extraction now
+  # google_ml_kit: ^0.18.0
 
   # PDF text extraction (direct approach)
   syncfusion_flutter_pdf: ^26.2.14
