added management section, fixed csv export function for reports

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <!-- Internet permission for downloading and viewing PDFs -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Storage permissions for CSV export -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:label="InventoryPro"
         android:name="${applicationName}"
