--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   # File operations
   path_provider: ^2.1.1
 
+  # Permission handling for mobile storage access
+  permission_handler: ^11.3.1
+
   # Additional UI and utility packages
   provider: ^6.1.2
 
