feat: add demo report. add file export functions. add item activiry tracking. sales report add customer purchase detail

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,10 @@ dependencies:
   # PDF text extraction (direct approach)
   syncfusion_flutter_pdf: ^26.2.14
 
+  # OpenRouter LLM OCR integration
+  http: ^1.2.0  # HTTP client for API requests
+  flutter_dotenv: ^5.1.0  # Environment variable loading
+
 
 dev_dependencies:
   flutter_test:
@@ -111,7 +115,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
