feat(v2.2.0): Add Reference Update & Report Enhancements - Added admin utility to edit Order/Demo numbers with smart search. - Updated Inventory Report with Demo/Returned items & responsive layout. - Restricted critical admin tools to debug mode. - Updated README with v2.2.0 features.

--- a/.gitignore
+++ b/.gitignore
@@ -63,5 +63,11 @@ android/local.properties
 # Firebase configuration (contains sensitive API keys)
 lib/firebase_options.dart
 
+# Environment variables and API keys
+.env
+.env.local
+.env.*.local
+**/*.env
+
 # IDE files (additional)
 *.iml
